--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ phases:
   install:
     commands:
       - npm install time
-      - aws cloudformation package --template-file samTemplate.yaml --s3-bucket bucket-name 
+      - aws cloudformation package --template-file samTemplate.yaml --s3-bucket ${ARTIFACT_BUCKET} 
                                    --output-template-file NewSamTemplate.yaml
 artifacts:
   type: zip
